--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>😎El Jefe's Personal Site</title>
@@ -8,7 +9,7 @@
 <body>
     <table cellspacing="20">
 <tr>
-    <td> <img src="images/35541639_2113677525313244_7796634766421262336_n-modified.png" width="120" height="120"></td>
+    <td> <img src="images/35541639_2113677525313244_7796634766421262336_n-modified.png"></td>
     <td><h1>El Jefe</h1>
         <p><em>Cel care a <a href="https://ro.wikipedia.org/wiki/Cristofor_Columb">  <strong>descoperit</strong></a> acum, ce ar fi putut face <strong>de acum 10 ani</strong>.</em>.</p>
         <p>Zilele sunt tot mai <strong>frumoase</strong> si <strong>senine</strong><strong><em> odata</em></strong> cu venirea primaverii iar timpul pretios nu trebuie irosit cu lucruri marunte.</p></td>
@@ -24,7 +25,7 @@
         </ul> 
         <hr size="3 "noshade>
         <h3>Work Experience</h3>
-        <table cellspacing="10";>
+        <table cell spacing="10">
             <thead>
                 <tr>
                     <th><h3>Dates</h3></th>
