--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
 <tr>
-    <td> <img src="images/35541639_2113677525313244_7796634766421262336_n-modified.png" alt="Cristi profile picture"></td>
+    <td> <img src="images/euu-modified.png" alt="Cristi profile picture"></td>
     <td><h1>El Jefe</h1>
         <p><em>Cel care a <a href="https://ro.wikipedia.org/wiki/Cristofor_Columb">  <strong>descoperit</strong></a> acum, ce ar fi putut face <strong>de acum 10 ani</strong>.</em>.</p>
         <p>Zilele sunt tot mai <strong>frumoase</strong> si <strong>senine</strong><strong><em> odata</em></strong> cu venirea primaverii iar timpul pretios nu trebuie irosit cu lucruri marunte.</p></td>
